src/test/resources/refCompilerOutput/invalid/semanticErr/scope/badScopeRedefine.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 15:8 -- Incompatible type at 5 (expected: BOOL, actual: INT)
